feat(api): add file deletion endpoint
Introduces a new DELETE endpoint `/delete` to remove files from the S3 bucket.

This endpoint accepts `folder` and `file` query parameters to specify the object to be deleted.

Includes corresponding updates to Swagger documentation for the new endpoint.
